added new plugin

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ PROJECT_NAME = ""
 OWNER_ID = 
 LOG_CHANNEL = 
 LOGGING = "FileLog"
+ENV = "DEV"
 GROUP_SUPPORT =
 COMMAND = "/"
 AUTHORIZED_LIST = []
